# barid-client

./: README.md  pyproject.toml
barid/: __init__.py
barid/api/: mailapi.py
barid/client/: __init__.py  engine.py
barid/client/domains/: domains_list.py
barid/client/emails/: emails_count.py  emails_delete.py  emails_list.py
barid/client/inbox/: inbox_delete.py  inbox_detail.py
barid/models/: __init__.py  delete.py  details.py  email.py
barid/types/: __init__.py  ctypes.py
barid/utils/: decorators.py  session.py
examples/: example.py
